- Changed structure of added entities  from hashset to hashmap - more tests about ParseTreeToAST